--- a/src/data/grammar/images/tournaments/mtgTournamentImage.yaml
+++ b/src/data/grammar/images/tournaments/mtgTournamentImage.yaml
@@ -1,6 +1,6 @@
 # tournamentLogo: "[#_tournamentInit#][_tournamentWinnerText:#_pro# wins #_tournamentType.capitalize# #_tournamentName.capitalize#]#_tournamentWinnerText# #_tournamentLogoOrientationPlaceholder# {htmlImg htmlImgString=`#_tournamentImageStyle# #tournamentLogoImage#`}"
 
-tournamentLogo: "[#_tournamentInit#][_tournamentWinnerText:#_pro# wins #_tournamentType.capitalize# #_tournamentName.capitalize#]#_tournamentWinnerText# #_tournamentLogoOrientationPlaceholder# {htmlImg htmlImgString=`#_tournamentLogoHtml#`}"
+tournamentLogo: "[#_tournamentInit#][#mtgTournamentWinner#][_tournamentWinnerText:#_winnerName# wins #_tournamentType.capitalize# #_tournamentName.capitalize#]#_tournamentWinnerText# #_tournamentLogoOrientationPlaceholder# {htmlImg htmlImgString=`#_tournamentLogoHtml#`}"
 
 _tournamentLogoDirectory: "./src/data/images/mtg-logos"
 
@@ -8,25 +8,26 @@ _tournamentLogoDirectoryImage:
 - "mtg-small-logo-2.png"
 
 _tournamentLogoOrientationPlaceholder:
-- "[_lightOrDark:light][_logoOrientation:#_tournamentLogoStyle_topRight#][_tournamentTypeSrc:#_tournamentTypeSrcLight#]"
+# - "[_lightOrDark:light][_logoOrientation:#_tournamentLogoStyle_topRight#][_tournamentTypeSrc:#_tournamentTypeSrcLight#]"
 - "[_lightOrDark:dark][_logoOrientation:#_tournamentLogoStyle_topRight#][_tournamentTypeSrc:#_tournamentTypeSrcDark#]"
 
 _tournamentLogoStyle_topRight: |
   [_topRowClass:top-row top-aligned right-aligned-image][_topRowAlign:right]
   [_midRowClass:right-aligned]
-  [_botRowClass:bottom-row top-aligned right-aligned #_lightOrDark#"]
+  [_botRowClass:bottom-row top-aligned right-aligned #_lightOrDark#]
 
 _tournamentLogoHtml: |
   #_tournamentImageStyle#
   <body>
-    <table class="photo" cellspacing="0" cellpadding="0">
+    <table class="photo photo-source" cellspacing="0" cellpadding="0">
       <tr>
-        <td align="#_topRowAlign#" class="#_topRowClass#"><img class="magic-logo" src="#_tournamentLogoDirectory#/#_tournamentLogoDirectoryImage#"></td>
+        <td align="#_topRowAlign#" class="#_topRowClass#" colspan=2><img class="magic-logo" src="#_tournamentLogoDirectory#/#_tournamentLogoDirectoryImage#"></td>
       </tr>
       <tr>
-        <td class="#_midRowClass#"><img src="#_tournamentTypeSrc#"/></td></tr>
+        <td class="#_midRowClass#" colspan=2><img src="#_tournamentTypeSrc#"/></td></tr>
       <tr>
-        <td class="#_botRowClass#">#_tournamentName.allCaps#</td>
+        <td class="filler"></td>
+        <td class="#_botRowClass# bottom-row-sized">#_tournamentName.allCaps#</td>
       </tr>
     </table>
   </body> 
@@ -34,13 +35,15 @@ _tournamentLogoHtml: |
 _tournamentImageStyle: |
   <head>
     <style>
-      table.photo << background-image: url(./data/images/tournament-winners/joel-larsson-1.jpg); width: 800px; height: 530px; >>
+      table.photo << width: 800px; height: 530px; background-size: 100% auto; >>
+
+      table.photo-source << background-image: url(#mtgTournamentWinnerSrc#); >>
 
       td << line-height: .9em; -webkit-text-stroke-width: .75px; font-size: 48px; font-family: 'Chuck Noon',Beleren,serif; text-transform :capitalize; bottom: 0; padding: 0px 5px 0px 5px; text-shadow: 0px 0px 5px rgba(1, 1, 1, 1); margin: 0px; >>
 
-      td.light << color: black; -webkit-text-stroke-width: 1.25px; -webkit-text-fill-color: white; >>
+      td.light << color: black; -webkit-text-stroke-width: 2px; -webkit-text-fill-color: white; >>
       
-      td.dark << color: white; -webkit-text-fill-color: black; >>
+      td.dark << color: white; -webkit-text-stroke-width: 3px; -webkit-text-fill-color: black; >>
 
       td.bottom-row << padding-bottom: 2px; >>
 
@@ -56,8 +59,12 @@ _tournamentImageStyle: |
 
       td.right-aligned << text-align: right; >> 
 
-      td.right-aligned-image << margin-left: 100%; >>  
+      td.right-aligned-image << margin-left: 100%; >>
+
+      td.bottom-row-sized << width: 350px; >>
 
       img.magic-logo << display: block; max-width: 250px; max-height: 80px; width: auto; height: auto; >>
+
+      td.tournament-name << 300px; >>
     </style>
   </head>
